# Strava-Data-Visualizer

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
QTStravaChart/: QTStravaChart.pro  chartwidget.cpp  chartwidget.h  credentialsdialog.cpp  credentialsdialog.h  customchartview.cpp  customchartview.h  interactivelegend.cpp  interactivelegend.h  main.cpp  stravachart.cpp  stravachart.h  stravachart.ui
include/: api.h  chartrenderer.h  main.h  ui_stravachart.h  workoutdatapoint.h
src/: Makefile  QTStravaChart  api.cpp  chartrenderer.cpp  main.cpp  main2.cpp  moc_chartwidget.cpp  moc_credentialsdialog.cpp  moc_customchartview.cpp  moc_stravachart.cpp
tools/: build.sh
